# alpha_auv

./: README.md
auv3_sim/auv3_description/: CMakeLists.txt  README.md  package.xml
auv3_sim/auv3_description/config/: auv3_description.rviz
auv3_sim/auv3_description/launch/: auv3_gazebo.launch  auv3_rviz.launch
auv3_sim/auv3_description/urdf/: auv3.xacro  teledyne_whn.xacro  teledyne_whn_standalone.xacro
auv3_sim/auv3_gps_navigation/: CMakeLists.txt  README.md  package.xml
auv3_sim/auv3_gps_navigation/config/move_base/: costmap_common.yaml  costmap_exploration.yaml  costmap_local.yaml  planner.yaml
auv3_sim/auv3_gps_navigation/launch/: gps_navigation.launch  move_base.launch  move_base2.launch
auv3_sim/auv3_gps_navigation/src/: gps_waypoint.cpp  twistTOtwiststamp.py
auv3_sim/auv3_gps_navigation/waypoints/: waypoints.txt
auv3_sim/auv3_localization/: CMakeLists.txt  README.md  package.xml
auv3_sim/auv3_simulation/: CMakeLists.txt  README.md  package.xml
auv3_sim/auv3_simulation/config/: auv3.rviz  joint_names_auv3.yaml  rviz.rviz
auv3_sim/auv3_simulation/launch/: PoseStamped.yaml  auv3_pool_gazebo.launch  auv3_shipwreck_gazebo.launch  gazebo.launch  odom_rviz.launch  rviz.launch  thruster_cmd.launch  velocity_cmd.launch
auv3_sim/auv3_simulation/meshes/: surge_thruster_link.STL
auv3_sim/auv3_simulation/urdf/: auv3.xacro  auv3_old.urdf
auv3_sim/auv3_simulation/urdf/pan_tilt/: pan.urdf  pan.xacro  pan_copy.xacro
auv3_sim/auv3_simulation/worlds/: uwv.world
auv4_bringup/: CMakeLists.txt  package.xml
auv4_bringup/launch/: auv4_bringup_sim.launch  auv4_helm.launch  bringup_controller.launch
auv4_config/: CMakeLists.txt  package.xml
auv4_config/config/: control.yaml
auv4_controls/: CMakeLists.txt  package.xml
auv4_controls/launch/: controllers.launch
auv4_controls/src/: controller.py
auv4_driver/: CMakeLists.txt  package.xml
auv4_driver/src/: navigation_controller.py  rf_watchdog.py  stm_client.py
auv4_localization/: CMakeLists.txt  package.xml
auv4_localization/launch/: robot_localisation_local.launch
auv4_payloads/: CMakeLists.txt  package.xml
auv4_payloads/launch/: payloads.launch
auv4_payloads/scripts/: bar30_readings.py  dvl_publisher.py  gps.py  gps_readings.py  orientation_data.py  pressure_sensor.py  side_scan_sonar_wrapper.py
auv_stonefish/: CMakeLists.txt  package.xml
auv_stonefish/data/: fwd_thruster_s_link.STL  fwd_thruster_u_link.STL  rear_thruster_s_link.STL  rear_thruster_u_link.STL
auv_stonefish/description/: auv.scn.xacro
auv_stonefish/launch/: auv_stonefish_simulation.launch
(+26 files in other folders)
